--- a/css/styles.css
+++ b/css/styles.css
@@ -16,43 +16,41 @@ a {
 }
 
 /* Navigation-end-contact */
-.Neme {
-  color: var(--IRIS, #4d5ae5);
-  font-family: Raleway;
+.neme-logo {
+  color: #4d5ae5;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 21px; /* 116.667% */
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-}
-.Neme-logo {
-  color: var(--NAVY-BLUE, #2e2f42);
-  font-family: Raleway;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 21px; /* 116.667% */
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-}
-.item {
-  color: var(--NAVY-BLUE, #2e2f42);
+  line-height: 1.17;
 
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.32px;
+  text-transform: uppercase;
+}
+.name {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+
+  text-transform: uppercase;
 }
 .item:hover {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+}
+.item:focus {
   color: #404bbf;
 }
 .item:active {
   color: #404bbf;
 }
-
+.adres {
+  font-style: normal;
+}
 .link {
   color: var(--SLATE, #434455);
 
@@ -60,15 +58,18 @@ a {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: 0.32px;
 }
 .link:hover {
   color: #404bbf;
 }
+.link:focus {
+  color: #404bbf;
+}
 
 /* section 1 */
-.Fon {
+.fon {
   background: var(--NAVY-BLUE, #2e2f42);
 }
 .title {
@@ -77,30 +78,37 @@ a {
 
   font-family: Roboto;
   font-size: 56px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 60px; /* 107.143% */
+  line-height: 1.07;
   letter-spacing: 1.12px;
 }
-.Cnopca {
+.cnopca {
   border-radius: 4px;
   background: var(--IRIS, #4d5ae5);
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
-.Cnopca:hover {
+.cnopca:hover {
   border-radius: 4px;
   background: var(--OCEAN, #404bbf);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-.Inscription {
+.cnopca:focus {
+  background-color: #404bbf;
+}
+.inscription {
   color: var(--WHITE, #fff);
   text-align: center;
   font-family: Roboto;
   font-size: 56px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 60px; /* 107.143% */
+  line-height: 60px;
   letter-spacing: 1.12px;
 }
 
@@ -110,33 +118,30 @@ a {
   color: var(--NAVY-BLUE, #2e2f42);
   font-family: Roboto;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   letter-spacing: 0.4px;
 }
 .text {
   color: var(--SLATE, #434455);
   font-family: Roboto;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: 0.32px;
 }
 
 /* section 3 */
-.Fonfoto {
+.fonfoto {
   background: var(--CLOUD, #f4f4fd);
 }
-.Team {
+.team {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
   font-family: Roboto;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 40px; /* 111.111% */
+  line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
@@ -158,35 +163,43 @@ a {
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
-.User-name {
+.user-name {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
   font-family: Roboto;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   letter-spacing: 0.4px;
 }
-.Profession {
+.profession {
   color: var(--SLATE, #434455);
   text-align: center;
   font-family: Roboto;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: 0.32px;
 }
 
 /* section 4 */
-.Project-Card {
+.project-card {
   background: #fff;
 }
-.Portfolio {
+.section-our {
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+.portfolio {
   background: #fff;
 }
-.Portfolio-img {
+.portfolio-img {
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--WHITE, #fff);
 }
@@ -194,9 +207,8 @@ a {
   color: var(--NAVY-BLUE, #2e2f42);
   font-family: Roboto;
   font-size: 20px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   letter-spacing: 0.4px;
 }
 .epp {
@@ -211,9 +223,8 @@ a {
   color: var(--IRIS, #4d5ae5);
   font-family: Raleway;
   font-size: 18px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 21px; /* 116.667% */
+  line-height: 21px;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
@@ -221,9 +232,8 @@ a {
   color: var(--CLOUD, #f4f4fd);
   font-family: Raleway;
   font-size: 18px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 21px; /* 116.667% */
+  line-height: 21px;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
@@ -231,8 +241,7 @@ a {
   color: var(--CLOUD, #f4f4fd);
   font-family: Roboto;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: 0.32px;
 }
