--- a/css/styles.css
+++ b/css/styles.css
@@ -17,30 +17,33 @@ a {
 
 /* Navigation-end-contact */
 .neme-logo {
-  color: #4d5ae5;
+  color: #2e2f42;
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
-
   text-transform: uppercase;
 }
 .name {
-  color: var(--NAVY-BLUE, #2e2f42);
+  color: var(--NAVY-BLUE, #4d5ae5);
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
-
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-.item:hover {
-  color: var(--NAVY-BLUE, #2e2f42);
+
+.item {
+  color: #2e2f42;
   font-family: Roboto;
-  font-size: 16px;
   font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.32px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.item:hover {
+  color: #404bbf;
 }
 .item:focus {
   color: #404bbf;
@@ -214,13 +217,14 @@ a {
 .epp {
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--WHITE, #fff);
+  letter-spacing: 0.02em;
 }
 /* Futer */
 .footer {
   background: var(--NAVY-BLUE, #2e2f42);
 }
 .lod {
-  color: var(--IRIS, #4d5ae5);
+  color: #f4f4fd;
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
@@ -229,11 +233,11 @@ a {
   text-transform: uppercase;
 }
 .lodg {
-  color: var(--CLOUD, #f4f4fd);
-  font-family: Raleway;
+  color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 21px;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
