--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ a {
   text-transform: uppercase;
 }
 .name {
-  color: var(--NAVY-BLUE, #4d5ae5);
+  color: #4d5ae5;
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
