--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,9 @@ a {
 }
 
 /* Navigation-end-contact */
-.name {
-  color: #4d5ae5;
+.header-item {
   font-family: Raleway, sans-serif;
+  color: #4d5ae5;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
@@ -26,7 +26,7 @@ a {
   text-transform: uppercase;
 }
 
-.neme-logo {
+.item-logo {
   color: #2e2f42;
   font-family: Raleway, sans-serif;
   font-size: 18px;
