--- a/css/styles.css
+++ b/css/styles.css
@@ -190,14 +190,12 @@ a {
 .project-card {
   background: #fff;
 }
-.section-our {
-  color: var(--NAVY-BLUE, #2e2f42);
+.section-logo {
+  color: #2e2f42;
   text-align: center;
   font-family: Roboto;
-  font-size: 36px;
-  font-weight: 700;
   line-height: 1.5;
-  letter-spacing: 0.72px;
+  font-weight: 700;
   text-transform: capitalize;
 }
 .portfolio {
