--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,15 @@ a {
   background: var(--WHITE, #fff);
   letter-spacing: 0.02em;
 }
+.gallery-itemm {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-family: Roboto;
+  font-size: 20px;
+  line-height: 1.5;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+}
 /* Futer */
 .footer {
   background: var(--NAVY-BLUE, #2e2f42);
