--- a/css/styles.css
+++ b/css/styles.css
@@ -208,9 +208,10 @@ a {
 .gallery-item {
   color: var(--NAVY-BLUE, #2e2f42);
   font-family: Roboto;
+  line-height: 1.2;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 20px;
   letter-spacing: 0.4px;
 }
 .epp {
