--- a/css/styles.css
+++ b/css/styles.css
@@ -209,9 +209,8 @@ a {
   color: var(--NAVY-BLUE, #2e2f42);
   font-family: Roboto;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 20px;
   line-height: 1.2;
+  letter-spacing: 0.2em;
 }
 .epp {
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
